--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,8 @@
                     <h2 class="results-header__title">Результаты поиска</h2>
                     <a href="" class="results-header__link link">
                         <p class="results-header__link-text">Посмотреть аналитику</p>
-                        <img src="images/back.svg" alt=">" class="results-header__link-icon">
+                        <!--<img src="images/back.svg" alt=">" class="results-header__link-icon">-->
+                        <img src="<%=require('./images/back.svg')%>" alt=">" class="results-header__link-icon">
                     </a>
                 </div>
                 <div class="results-grid">
@@ -106,12 +107,14 @@
                 <ul class="footer__socials">
                     <li class="footer__social-item">
                         <a href="" class="footer__social-link link">
-                            <img src="images/github.svg" alt="" class="footer__social-icon"> 
+                            <!--<img src="images/github.svg" alt="" class="footer__social-icon">-->
+                            <img src="<%=require('./images/github.svg')%>" alt="" class="footer__social-icon">
                         </a>
                     </li>
                     <li class="footer__social-item">
                         <a href="" class="footer__social-link link">
-                            <img src="images/iconmonstr-facebook-6.svg" alt="" class="footer__social-icon"> 
+                            <!--<img src="images/iconmonstr-facebook-6.svg" alt="" class="footer__social-icon">-->
+                            <img src="<%=require('./images/iconmonstr-facebook-6.svg')%>" alt="" class="footer__social-icon"> 
                         </a>
                     </li>
                 </ul>
