--- a/src/about.html
+++ b/src/about.html
@@ -16,8 +16,8 @@
         <header class="header header_theme_light">
             <h2 lang="en" class="header__title header__title_theme_light">NewzAnalizer</h1>
             <nav class="header__links">
-                <a href="#" class="header__link header__link_theme_light link">Главная</a>
-                <a href="#" class="header__link header__link_theme_light header__link_current link">О проекте</a>
+                <a href="index.html" class="header__link header__link_theme_light link" target="_blank">Главная</a>
+                <a href="about.html" class="header__link header__link_theme_light header__link_current link" target="_blank">О проекте</a>
             </nav>
         </header>
         <section class="for-clients">
@@ -36,25 +36,25 @@
             <h2 class="technology__title">Используемые технологии</h2>
             <ul class="technology__items">
                 <li class="technology__item">
-                    <a href="" class="technology__item-link link">
+                    <a href="https://www.w3.org/TR/html5/" class="technology__item-link link" target="_blank">
                         <h3 class="technology__item-title">HTML5</h3>
                         <img src="images/html5_icon.svg" alt="HTML5" class="technology__item-icon technology__item-icon_html5">
                     </a>
                 </li>
                 <li class="technology__item">
-                    <a href="" class="technology__item-link link">
+                    <a href="https://www.w3.org/Style/CSS/" class="technology__item-link link" target="_blank">
                         <h3 class="technology__item-title">CSS</h3>
                         <img src="images/css3_icon.svg" alt="CSS3" class="technology__item-icon technology__item-icon_css">
                     </a>
                 </li>
                 <li class="technology__item">
-                    <a href="" class="technology__item-link link">
+                    <a href="http://developer.mozilla.org/ru/JavaScript" class="technology__item-link link" target="_blank">
                         <h3 class="technology__item-title">JavaScript</h3>
                         <img src="images/js_icon.svg" alt="JavaScript" class="technology__item-icon technology__item-icon_js">
                     </a>
                 </li>
                 <li class="technology__item">
-                    <a href="" class="technology__item-link link">
+                    <a href="https://webpack.js.org/" class="technology__item-link link" target="_blank">
                         <h3 class="technology__item-title">Webpack</h3>
                         <img src="images/webpack_icon.svg" alt="Webpack" class="technology__item-icon technology__item-icon_webpack">
                     </a>
@@ -76,7 +76,7 @@
         <section class="results">
             <div class="results-header">
                 <h2 class="results-header__title">История коммитов из GitHub</h2>
-                <a href="" class="results-header__link results-header__link_theme_about link">
+                <a href="https://github.com/Rhamphorhynchus/NewzAnalizer/commits/master" class="results-header__link results-header__link_theme_about link" target="_blank">
                     <p class="results-header__link-text">Открыть в  Github</p>
                     <img src="images/back.svg" alt=">" class="results-header__link-icon">
                 </a>
@@ -113,23 +113,23 @@
                 <p class="footer__copyright">&copy; 2019 Supersite</p>
                 <ul class="footer__links">
                     <li class="footer__link-item">
-                        <a href="#" class="footer__link link">Главная</a>
+                        <a href="index.html" class="footer__link link" target="_blank">Главная</a>
                     </li>
                     <li class="footer__link-item">
-                        <a href="#" class="footer__link link">О проекте</a>
+                        <a href="about.html" class="footer__link link" target="_blank">О проекте</a>
                     </li>
                     <li class="footer__link-item">
-                        <a href="#" class="footer__link link">Яндекс.Практикум</a>
+                        <a href="https://praktikum.yandex.ru/" class="footer__link link" target="_blank">Яндекс.Практикум</a>
                     </li>
                 </ul>
                 <ul class="footer__socials">
                     <li class="footer__social-item">
-                        <a href="" class="footer__social-link link">
+                        <a href="https://github.com/Rhamphorhynchus/NewzAnalizer" class="footer__social-link link" target="_blank">
                             <img src="images/github.svg" alt="" class="footer__social-icon"> 
                         </a>
                     </li>
                     <li class="footer__social-item">
-                        <a href="" class="footer__social-link link">
+                        <a href="https://ru-ru.facebook.com/yandex.praktikum/" class="footer__social-link link" target="_blank">
                             <img src="images/iconmonstr-facebook-6.svg" alt="" class="footer__social-icon"> 
                         </a>
                     </li>
