--- a/src/analytics.html
+++ b/src/analytics.html
@@ -15,15 +15,15 @@
         <header class="header header_theme_light">
             <h2 lang="en" class="header__title header__title_theme_light">NewzAnalizer</h1>
             <nav class="header__links">
-                <a href="#" class="header__link header__link_theme_light link">Главная</a>
-                <a href="#" class="header__link header__link_theme_light link">О проекте</a>
+                <a href="index.html" class="header__link header__link_theme_light link" target="_blank">Главная</a>
+                <a href="about.html" class="header__link header__link_theme_light link" target="_blank">О проекте</a>
             </nav>
         </header>
         <section class="main">
             <section class="statistics">
                 <nav class="statistics__links">
-                    <a href="" class="statistics__link statistics__link_root link">Главная</a>
-                    <a href="" class="statistics__link link">Аналитика</a>
+                    <a href="index.html" class="statistics__link statistics__link_root link" target="_blank">Главная</a>
+                    <a href="analytics.html" class="statistics__link link" target="_blank">Аналитика</a>
                 </nav>
                 <h1 class="statistics__title">Вы спросили: &laquo;Путешествия&raquo;</h1>
                 <ul class="statistics__items">
@@ -102,23 +102,23 @@
                 <p class="footer__copyright">&copy; 2019 Supersite</p>
                 <ul class="footer__links">
                     <li class="footer__link-item">
-                        <a href="#" class="footer__link link">Главная</a>
+                        <a href="index.html" class="footer__link link" target="_blank">Главная</a>
                     </li>
                     <li class="footer__link-item">
-                        <a href="#" class="footer__link link">О проекте</a>
+                        <a href="about.html" class="footer__link link" target="_blank">О проекте</a>
                     </li>
                     <li class="footer__link-item">
-                        <a href="#" class="footer__link link">Яндекс.Практикум</a>
+                        <a href="https://praktikum.yandex.ru/" class="footer__link link" target="_blank">Яндекс.Практикум</a>
                     </li>
                 </ul>
                 <ul class="footer__socials">
                     <li class="footer__social-item">
-                        <a href="" class="footer__social-link link">
+                        <a href="https://github.com/Rhamphorhynchus/NewzAnalizer" class="footer__social-link link" target="_blank">
                             <img src="images/github.svg" alt="" class="footer__social-icon"> 
                         </a>
                     </li>
                     <li class="footer__social-item">
-                        <a href="" class="footer__social-link link">
+                        <a href="https://ru-ru.facebook.com/yandex.praktikum/" class="footer__social-link link" target="_blank">
                             <img src="images/iconmonstr-facebook-6.svg" alt="" class="footer__social-icon"> 
                         </a>
                     </li>
