--- a/src/about.html
+++ b/src/about.html
@@ -8,7 +8,8 @@
     <title>Об авторе</title>
     <link rel="stylesheet" href="./vendor/fonts.css">
     <!--<link rel="stylesheet" href="./pages/style.css">-->
-    <link rel="stylesheet" href="./pages/about.css">
+    <!--<link rel="stylesheet" href="./pages/about.css">-->
+    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.about.css %>">
     <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
@@ -137,5 +138,7 @@
             </nav>
         </footer>
     </section>
+    <!--<script src="<%= htmlWebpackPlugin.files.chunks.index.entry %>"></script>-->
+    <script src="<%= htmlWebpackPlugin.files.chunks.about.entry %>"></script>
 </body>
 </html>
