--- a/src/analytics.html
+++ b/src/analytics.html
@@ -7,7 +7,8 @@
     <meta name="author" content="MG">
     <title>Аналитика</title>
     <link rel="stylesheet" href="./vendor/fonts.css">
-    <link rel="stylesheet" href="./pages/analytics.css">
+    <!--<link rel="stylesheet" href="./pages/analytics.css">-->
+    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.analytics.css %>">
     <link rel="icon" href="images/favicon3.png" type="image/png">
 </head>
 <body>
@@ -126,5 +127,7 @@
             </nav>
         </footer>
     </section>
+    <!--<script src="<%= htmlWebpackPlugin.files.chunks.index.entry %>"></script>-->
+    <script src="<%= htmlWebpackPlugin.files.chunks.analytics.entry %>"></script>
 </body>
 </html>
