--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title lang="en">NewsAnalizer</title>
     <link rel="stylesheet" href="./vendor/fonts.css">
     <!--<link rel="stylesheet" href="./pages/index.css">-->
-    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
+    <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.index.css %>">
     <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
@@ -122,6 +122,6 @@
         </footer>
     </section>
     <!--<script src="./js/index.js"></script>-->
-    <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+    <script src="<%= htmlWebpackPlugin.files.chunks.index.entry %>"></script>
 </body>
 </html>
