import fonts.css added

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Поиск новостей по ключевому слову">
     <meta name="author" content="MG">
     <title lang="en">NewsAnalizer</title>
-    <link rel="stylesheet" href="./vendor/fonts.css">
+    <!--<link rel="stylesheet" href="./vendor/fonts.css">-->
     <!--<link rel="stylesheet" href="./pages/index.css">-->
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.index.css %>">
     <link rel="icon" href="images/favicon.png" type="image/png">
