--- a/src/about.html
+++ b/src/about.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Об авторе сайта поиска новостей по ключевому слову">
     <meta name="author" content="MG">
     <title>Об авторе</title>
-    <link rel="stylesheet" href="./vendor/fonts.css">
+    <!--<link rel="stylesheet" href="./vendor/fonts.css">-->
     <!--<link rel="stylesheet" href="./pages/style.css">-->
     <!--<link rel="stylesheet" href="./pages/about.css">-->
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.about.css %>">
