--- a/src/analytics.html
+++ b/src/analytics.html
@@ -6,7 +6,7 @@
     <meta name="analytics" content="Количество новостей по ключевому слову по дням">
     <meta name="author" content="MG">
     <title>Аналитика</title>
-    <link rel="stylesheet" href="./vendor/fonts.css">
+    <!--<link rel="stylesheet" href="./vendor/fonts.css">-->
     <!--<link rel="stylesheet" href="./pages/analytics.css">-->
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.analytics.css %>">
     <link rel="icon" href="images/favicon3.png" type="image/png">
