--- a/src/analytics.html
+++ b/src/analytics.html
@@ -115,12 +115,12 @@
                 <ul class="footer__socials">
                     <li class="footer__social-item">
                         <a href="https://github.com/Rhamphorhynchus/NewzAnalizer" class="footer__social-link link" target="_blank">
-                            <img src="images/github.svg" alt="" class="footer__social-icon"> 
+                            <img src="<%=require('./images/github.svg')%>" alt="" class="footer__social-icon">
                         </a>
                     </li>
                     <li class="footer__social-item">
                         <a href="https://ru-ru.facebook.com/yandex.praktikum/" class="footer__social-link link" target="_blank">
-                            <img src="images/iconmonstr-facebook-6.svg" alt="" class="footer__social-icon"> 
+                            <img src="<%=require('./images/iconmonstr-facebook-6.svg')%>" alt="" class="footer__social-icon"> 
                         </a>
                     </li>
                 </ul>
