image alt attribute added

--- a/src/index.html
+++ b/src/index.html
@@ -108,13 +108,13 @@
                     <li class="footer__social-item">
                         <a href="https://github.com/Rhamphorhynchus/NewzAnalizer" class="footer__social-link link" target="_blank">
                             <!--<img src="images/github.svg" alt="" class="footer__social-icon">-->
-                            <img src="<%=require('./images/github.svg')%>" alt="" class="footer__social-icon">
+                            <img src="<%=require('./images/github.svg')%>" alt="GitHub" class="footer__social-icon">
                         </a>
                     </li>
                     <li class="footer__social-item">
                         <a href="https://ru-ru.facebook.com/yandex.praktikum/" class="footer__social-link link" target="_blank">
                             <!--<img src="images/iconmonstr-facebook-6.svg" alt="" class="footer__social-icon">-->
-                            <img src="<%=require('./images/iconmonstr-facebook-6.svg')%>" alt="" class="footer__social-icon"> 
+                            <img src="<%=require('./images/iconmonstr-facebook-6.svg')%>" alt="Facebook" class="footer__social-icon"> 
                         </a>
                     </li>
                 </ul>
