--- a/analytics.html
+++ b/analytics.html
@@ -6,9 +6,9 @@
     <meta name="analytics" content="Количество новостей по ключевому слову по дням">
     <meta name="author" content="MG">
     <title>Аналитика</title>
-    <link rel="stylesheet" href="./vendor/fonts.css">
+    <!--<link rel="stylesheet" href="./vendor/fonts.css">-->
     <!--<link rel="stylesheet" href="./pages/analytics.css">-->
-    <link rel="stylesheet" href="analytics.eb51b6733a53d7933931.css">
+    <link rel="stylesheet" href="analytics.b37d592faf5dd398688e.css">
     <link rel="icon" href="images/favicon3.png" type="image/png">
 </head>
 <body>
@@ -115,12 +115,12 @@
                 <ul class="footer__socials">
                     <li class="footer__social-item">
                         <a href="https://github.com/Rhamphorhynchus/NewzAnalizer" class="footer__social-link link" target="_blank">
-                            <img src="images/github.svg" alt="" class="footer__social-icon"> 
+                            <img src="images/044c3292f00395606aed4005e04722de.svg" alt="GitHub" class="footer__social-icon">
                         </a>
                     </li>
                     <li class="footer__social-item">
                         <a href="https://ru-ru.facebook.com/yandex.praktikum/" class="footer__social-link link" target="_blank">
-                            <img src="images/iconmonstr-facebook-6.svg" alt="" class="footer__social-icon"> 
+                            <img src="images/a68b5d7c0668fe0f885882e4a4f6221a.svg" alt="Facebook" class="footer__social-icon"> 
                         </a>
                     </li>
                 </ul>
