--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Поиск новостей по ключевому слову">
     <meta name="author" content="MG">
     <title lang="en">NewsAnalizer</title>
-    <link rel="stylesheet" href="./vendor/fonts.css">
+    <!--<link rel="stylesheet" href="./vendor/fonts.css">-->
     <!--<link rel="stylesheet" href="./pages/index.css">-->
-    <link rel="stylesheet" href="index.421ce9fb73f6cd0197b8.css">
+    <link rel="stylesheet" href="index.c64a978db0d7b6dc917d.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
@@ -108,13 +108,13 @@
                     <li class="footer__social-item">
                         <a href="https://github.com/Rhamphorhynchus/NewzAnalizer" class="footer__social-link link" target="_blank">
                             <!--<img src="images/github.svg" alt="" class="footer__social-icon">-->
-                            <img src="images/044c3292f00395606aed4005e04722de.svg" alt="" class="footer__social-icon">
+                            <img src="images/044c3292f00395606aed4005e04722de.svg" alt="GitHub" class="footer__social-icon">
                         </a>
                     </li>
                     <li class="footer__social-item">
                         <a href="https://ru-ru.facebook.com/yandex.praktikum/" class="footer__social-link link" target="_blank">
                             <!--<img src="images/iconmonstr-facebook-6.svg" alt="" class="footer__social-icon">-->
-                            <img src="images/a68b5d7c0668fe0f885882e4a4f6221a.svg" alt="" class="footer__social-icon"> 
+                            <img src="images/a68b5d7c0668fe0f885882e4a4f6221a.svg" alt="Facebook" class="footer__social-icon"> 
                         </a>
                     </li>
                 </ul>
