--- a/src/analytics.html
+++ b/src/analytics.html
@@ -28,8 +28,8 @@
                 </nav>
                 <h1 class="statistics__title">Вы спросили: &laquo;Путешествия&raquo;</h1>
                 <ul class="statistics__items">
-                    <li class="statistics__item">Новостей за неделю: <span class="statistics__item-total">34 324</span></li>
-                    <li class="statistics__item">Упоминаний в заголовках: <span class="statistics__item-total">235</span></li>
+                    <li class="statistics__item">Новостей за неделю: <span class="statistics__item-total statistics__item-total_weekly">34 324</span></li>
+                    <li class="statistics__item">Упоминаний в заголовках: <span class="statistics__item-total statistics__item-total_in-headers">235</span></li>
                 </ul>
             </section>
             <section class="table">
@@ -47,45 +47,52 @@
                 </div>
                 <div class="table__histograms">
                     <div class="table__histogram">
-                        <p class="table__histogram-date">19, пн</p>
+                        <p class="table__histogram-date table__histogram-date-6">19, пн</p>
                         <div class="table__histogram-value-container">
-                            <p class="table__histogram-value table__histogram-value-30">30</p>
+                            <!--<p class="table__histogram-value table__histogram-value-date-6 table__histogram-value-30">30</p>-->
+                            <p class="table__histogram-value table__histogram-value-date-6">30</p>
                         </div>
                     </div>
                     <div class="table__histogram">
-                        <p class="table__histogram-date">20, вт</p>
+                        <p class="table__histogram-date  table__histogram-date-5">20, вт</p>
                         <div class="table__histogram-value-container">
-                            <p class="table__histogram-value table__histogram-value-30">30</p>
+                            <!--<p class="table__histogram-value  table__histogram-value-date-5 table__histogram-value-30">30</p>-->
+                            <p class="table__histogram-value table__histogram-value-date-5">30</p>
                         </div>
                     </div>
                     <div class="table__histogram">
-                        <p class="table__histogram-date">21, ср</p>
+                        <p class="table__histogram-date table__histogram-date-4">21, ср</p>
                         <div class="table__histogram-value-container">
-                            <p class="table__histogram-value table__histogram-value-16">16</p>
+                            <!--<p class="table__histogram-value  table__histogram-value-date-4 table__histogram-value-16">16</p>-->
+                            <p class="table__histogram-value table__histogram-value-date-4">16</p>
                         </div>
                     </div>
                     <div class="table__histogram">
-                        <p class="table__histogram-date">22, чт</p>
+                        <p class="table__histogram-date table__histogram-date-3">22, чт</p>
                         <div class="table__histogram-value-container">
-                            <p class="table__histogram-value table__histogram-value-11">11</p>
+                            <!--<p class="table__histogram-value  table__histogram-value-date-3 table__histogram-value-11">11</p>-->
+                            <p class="table__histogram-value table__histogram-value-date-3">11</p>
                         </div>
                     </div>
                     <div class="table__histogram">
-                        <p class="table__histogram-date">23, пт</p>
+                        <p class="table__histogram-date table__histogram-date-2">23, пт</p>
                         <div class="table__histogram-value-container">
-                            <p class="table__histogram-value table__histogram-value-76">76</p>
+                            <!--<p class="table__histogram-value  table__histogram-value-date-2 table__histogram-value-76">76</p>-->
+                            <p class="table__histogram-value table__histogram-value-date-2">76</p>
                         </div>
                     </div>
                     <div class="table__histogram">
-                        <p class="table__histogram-date">24, сб</p>
+                        <p class="table__histogram-date table__histogram-date-1">24, сб</p>
                         <div class="table__histogram-value-container">
-                            <p class="table__histogram-value table__histogram-value-12">12</p>
+                            <!--<p class="table__histogram-value  table__histogram-value-date-1 table__histogram-value-12">12</p>-->
+                            <p class="table__histogram-value table__histogram-value-date-1">12</p>
                         </div>
                     </div>
                     <div class="table__histogram">
-                        <p class="table__histogram-date">25, вс</p>
+                        <p class="table__histogram-date table__histogram-date-0">25, вс</p>
                         <div class="table__histogram-value-container">
-                            <p class="table__histogram-value table__histogram-value-6">6</p>
+                            <!--<p class="table__histogram-value  table__histogram-value-date-0 table__histogram-value-6">6</p>-->
+                            <p class="table__histogram-value table__histogram-value-date-0">6</p>
                         </div>
                     </div>
                 </div>
@@ -127,6 +134,7 @@
             </nav>
         </footer>
     </section>
+    <!--<script src="./js/analytics.js"></script>-->
     <!--<script src="<%= htmlWebpackPlugin.files.chunks.index.entry %>"></script>-->
     <script src="<%= htmlWebpackPlugin.files.chunks.analytics.entry %>"></script>
 </body>
