--- a/src/about.html
+++ b/src/about.html
@@ -10,7 +10,8 @@
     <!--<link rel="stylesheet" href="./pages/style.css">-->
     <!--<link rel="stylesheet" href="./pages/about.css">-->
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.about.css %>">
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <!--<link rel="icon" href="images/favicon.png" type="image/png">-->
+    <link rel="icon" href="<%=require('./images/favicon2.png')%>" type="image/png">
 </head>
 <body>
     <section class="page">
