--- a/src/analytics.html
+++ b/src/analytics.html
@@ -9,7 +9,8 @@
     <!--<link rel="stylesheet" href="./vendor/fonts.css">-->
     <!--<link rel="stylesheet" href="./pages/analytics.css">-->
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.analytics.css %>">
-    <link rel="icon" href="images/favicon3.png" type="image/png">
+    <!--<link rel="icon" href="images/favicon3.png" type="image/png">-->
+    <link rel="icon" href="<%=require('./images/favicon3.png')%>" type="image/png">
 </head>
 <body>
     <section class="page">
