--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
     <!--<link rel="stylesheet" href="./vendor/fonts.css">-->
     <!--<link rel="stylesheet" href="./pages/index.css">-->
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.index.css %>">
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <!--<link rel="icon" href="images/favicon.png" type="image/png">-->
+    <link rel="icon" href="<%=require('./images/favicon1.png')%>" type="image/png">
 </head>
 <body>
     <section class="page">
