--- a/about.html
+++ b/about.html
@@ -9,8 +9,9 @@
     <!--<link rel="stylesheet" href="./vendor/fonts.css">-->
     <!--<link rel="stylesheet" href="./pages/style.css">-->
     <!--<link rel="stylesheet" href="./pages/about.css">-->
-    <link rel="stylesheet" href="about.d5165f99cf8e9715b92d.css">
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="stylesheet" href="about.5a7c857cd3c86f147e27.css">
+    <!--<link rel="icon" href="images/favicon.png" type="image/png">-->
+    <link rel="icon" href="images/f83ef537bbd48897f8a1c21be857b9a2.png" type="image/png">
 </head>
 <body>
     <section class="page">
@@ -145,7 +146,7 @@
             </nav>
         </footer>
     </section>
-    <!--<script src="index.decbb167a979e1ac6c41.js"></script>-->
+    <!--<script src="index.08884ff6b4001c64625a.js"></script>-->
     <script src="about.a44a624a274e5ffa63e8.js"></script>
 </body>
 </html>
