swiper, utility, histogramm, adaprtive news grid

--- a/src/analytics.html
+++ b/src/analytics.html
@@ -12,20 +12,20 @@
     <!--<link rel="icon" href="images/favicon3.png" type="image/png">-->
     <link rel="icon" href="<%=require('./images/favicon3.png')%>" type="image/png">
 </head>
-<body>
+<body class="body">
     <section class="page">
         <header class="header header_theme_light">
-            <h2 lang="en" class="header__title header__title_theme_light">NewzAnalizer</h1>
+            <h2 lang="en" class="header__title header__title_theme_light">NewzAnalizer</h2>
             <nav class="header__links">
-                <a href="index.html" class="header__link header__link_theme_light link" target="_blank">Главная</a>
-                <a href="about.html" class="header__link header__link_theme_light link" target="_blank">О проекте</a>
+                <a href="index.html" class="header__link header__link_theme_light link">Главная</a>
+                <a href="about.html" class="header__link header__link_theme_light link">О проекте</a>
             </nav>
         </header>
         <section class="main">
             <section class="statistics">
                 <nav class="statistics__links">
-                    <a href="index.html" class="statistics__link statistics__link_root link" target="_blank">Главная</a>
-                    <a href="analytics.html" class="statistics__link link" target="_blank">Аналитика</a>
+                    <a href="index.html" class="statistics__link statistics__link_root link">Главная</a>
+                    <a href="analytics.html" class="statistics__link link">Аналитика</a>
                 </nav>
                 <h1 class="statistics__title">Вы спросили: &laquo;Путешествия&raquo;</h1>
                 <ul class="statistics__items">
@@ -34,7 +34,7 @@
                 </ul>
             </section>
             <section class="table">
-                <h1 class="table__title">Аналитика по дням</h1>
+                <h2 class="table__title">Аналитика по дням</h2>
                 <div class="table__header">
                     <p class="table__header-title table__header-title_date">Дата (август)</p>
                     <p class="table__header-title table__header-title_data">Кол-во упоминаний</p>
@@ -51,49 +51,49 @@
                         <p class="table__histogram-date table__histogram-date-6">19, пн</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value table__histogram-value-date-6 table__histogram-value-30">30</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-6">30</p>
+                            <p class="table__histogram-value table__histogram-value-date-6 table__histogram-value-30">30</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date  table__histogram-date-5">20, вт</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-5 table__histogram-value-30">30</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-5">30</p>
+                            <p class="table__histogram-value table__histogram-value-date-5 table__histogram-value-30">30</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date table__histogram-date-4">21, ср</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-4 table__histogram-value-16">16</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-4">16</p>
+                            <p class="table__histogram-value table__histogram-value-date-4 table__histogram-value-16">16</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date table__histogram-date-3">22, чт</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-3 table__histogram-value-11">11</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-3">11</p>
+                            <p class="table__histogram-value table__histogram-value-date-3 table__histogram-value-16">11</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date table__histogram-date-2">23, пт</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-2 table__histogram-value-76">76</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-2">76</p>
+                            <p class="table__histogram-value table__histogram-value-date-2 table__histogram-value-76">76</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date table__histogram-date-1">24, сб</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-1 table__histogram-value-12">12</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-1">12</p>
+                            <p class="table__histogram-value table__histogram-value-date-1 table__histogram-value-12">12</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date table__histogram-date-0">25, вс</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-0 table__histogram-value-6">6</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-0">6</p>
+                            <p class="table__histogram-value table__histogram-value-date-0 table__histogram-value-6">6</p>
                         </div>
                     </div>
                 </div>
@@ -111,10 +111,10 @@
                 <p class="footer__copyright">&copy; 2019 Supersite</p>
                 <ul class="footer__links">
                     <li class="footer__link-item">
-                        <a href="index.html" class="footer__link link" target="_blank">Главная</a>
+                        <a href="index.html" class="footer__link link">Главная</a>
                     </li>
                     <li class="footer__link-item">
-                        <a href="about.html" class="footer__link link" target="_blank">О проекте</a>
+                        <a href="about.html" class="footer__link link">О проекте</a>
                     </li>
                     <li class="footer__link-item">
                         <a href="https://praktikum.yandex.ru/" class="footer__link link" target="_blank">Яндекс.Практикум</a>
