--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
     <!--<link rel="stylesheet" href="./vendor/fonts.css">-->
     <!--<link rel="stylesheet" href="./pages/style.css">-->
     <!--<link rel="stylesheet" href="./pages/about.css">-->
-    <link rel="stylesheet" href="../node_modules/swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="about.3d97ff20c68238488f52.css">
+    <!--<link rel="stylesheet" href="../node_modules/swiper/css/swiper.min.css">-->
+    <link rel="stylesheet" href="about.92d538253b6d14be1662.css">
     <!--<link rel="icon" href="images/favicon.png" type="image/png">-->
     <link rel="icon" href="images/f83ef537bbd48897f8a1c21be857b9a2.png" type="image/png">
 </head>
@@ -245,6 +245,6 @@
     </template>
     <!--<script src="./js/githubapi.js"></script>-->
     <!--<script src="index.09abe9fc1c5fdcb3ab52.js"></script>-->
-    <script src="about.b573b1d1916256e31c9c.js"></script>
+    <script src="about.572f375fe5398483a560.js"></script>
 </body>
 </html>
