--- a/src/about.html
+++ b/src/about.html
@@ -9,7 +9,7 @@
     <!--<link rel="stylesheet" href="./vendor/fonts.css">-->
     <!--<link rel="stylesheet" href="./pages/style.css">-->
     <!--<link rel="stylesheet" href="./pages/about.css">-->
-    <link rel="stylesheet" href="../node_modules/swiper/css/swiper.min.css">
+    <!--<link rel="stylesheet" href="../node_modules/swiper/css/swiper.min.css">-->
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.about.css %>">
     <!--<link rel="icon" href="images/favicon.png" type="image/png">-->
     <link rel="icon" href="<%=require('./images/favicon2.png')%>" type="image/png">
