commits block invisible at startup

--- a/src/about.html
+++ b/src/about.html
@@ -80,7 +80,7 @@
                 <p class="about__text">Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь потенциальным заказчикам.</p>
             </div>
         </section>
-        <section class="results results_commits">
+        <section class="results results_commits invisible">
             <div class="results-header results-header_commits">
                 <h2 class="results-header__title">История коммитов из GitHub</h2>
                 <a href="https://github.com/Rhamphorhynchus/NewzAnalizer/commits/master" class="results-header__link results-header__link_theme_about link" target="_blank">
