months name added to the histogram header

--- a/src/analytics.html
+++ b/src/analytics.html
@@ -36,7 +36,7 @@
             <section class="table">
                 <h2 class="table__title">Аналитика по дням</h2>
                 <div class="table__header">
-                    <p class="table__header-title table__header-title_date">Дата (август)</p>
+                    <p class="table__header-title table__header-title_date">Дата (<span class="table__header-title-months">август</span>)</p>
                     <p class="table__header-title table__header-title_data">Кол-во упоминаний</p>
                 </div>
                 <div class="table__header-scale">
