--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <!--<link rel="stylesheet" href="./pages/style.css">-->
     <!--<link rel="stylesheet" href="./pages/about.css">-->
     <!--<link rel="stylesheet" href="../node_modules/swiper/css/swiper.min.css">-->
-    <link rel="stylesheet" href="about.e68006cdb4b5bacb9729.css">
+    <link rel="stylesheet" href="about.7875e23b310178382359.css">
     <!--<link rel="icon" href="images/favicon.png" type="image/png">-->
     <link rel="icon" href="images/f83ef537bbd48897f8a1c21be857b9a2.png" type="image/png">
 </head>
@@ -80,7 +80,7 @@
                 <p class="about__text">Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь потенциальным заказчикам.</p>
             </div>
         </section>
-        <section class="results results_commits">
+        <section class="results results_commits invisible">
             <div class="results-header results-header_commits">
                 <h2 class="results-header__title">История коммитов из GitHub</h2>
                 <a href="https://github.com/Rhamphorhynchus/NewzAnalizer/commits/master" class="results-header__link results-header__link_theme_about link" target="_blank">
@@ -244,7 +244,7 @@
         </article>
     </template>
     <!--<script src="./js/githubapi.js"></script>-->
-    <!--<script src="index.28fb0c456fa578b942e8.js"></script>-->
-    <script src="about.1407fa02e3953a15300a.js"></script>
+    <!--<script src="index.85b2443a7916dbc4a0b4.js"></script>-->
+    <script src="about.67c16a1c42ffb3fdfb1f.js"></script>
 </body>
 </html>
