--- a/analytics.html
+++ b/analytics.html
@@ -8,7 +8,7 @@
     <title>Аналитика</title>
     <!--<link rel="stylesheet" href="./vendor/fonts.css">-->
     <!--<link rel="stylesheet" href="./pages/analytics.css">-->
-    <link rel="stylesheet" href="analytics.c1a1a702f6a78d1b0c64.css">
+    <link rel="stylesheet" href="analytics.183aaaad2d904288fdae.css">
     <!--<link rel="icon" href="images/favicon3.png" type="image/png">-->
     <link rel="icon" href="images/0153907d63a94ce67dfbdfc21abc2608.png" type="image/png">
 </head>
@@ -27,7 +27,7 @@
                     <a href="index.html" class="statistics__link statistics__link_root link">Главная</a>
                     <a href="analytics.html" class="statistics__link link">Аналитика</a>
                 </nav>
-                <h1 class="statistics__title">Вы спросили: &laquo;Путешествия&raquo;</h1>
+                <h1 class="statistics__title">Вы спросили: &laquo;<span class="statistics__title_quote">Путешествия</span>&raquo;</h1>
                 <ul class="statistics__items">
                     <li class="statistics__item">Новостей за неделю: <span class="statistics__item-total statistics__item-total_weekly">34 324</span></li>
                     <li class="statistics__item">Упоминаний в заголовках: <span class="statistics__item-total statistics__item-total_in-headers">235</span></li>
@@ -36,73 +36,73 @@
             <section class="table">
                 <h2 class="table__title">Аналитика по дням</h2>
                 <div class="table__header">
-                    <p class="table__header-title table__header-title_date">Дата (август)</p>
+                    <p class="table__header-title table__header-title_date">Дата (<span class="table__header-title-months">август</span>)</p>
                     <p class="table__header-title table__header-title_data">Кол-во упоминаний</p>
                 </div>
                 <div class="table__header-scale">
-                    <p class="table__header-scale-value">0</p>
-                    <p class="table__header-scale-value">25</p>
-                    <p class="table__header-scale-value">50</p>
-                    <p class="table__header-scale-value">75</p>
-                    <p class="table__header-scale-value">100</p>
+                    <p class="table__header-scale-value table__header-scale-value-0">0</p>
+                    <p class="table__header-scale-value table__header-scale-value-1">25</p>
+                    <p class="table__header-scale-value table__header-scale-value-2">50</p>
+                    <p class="table__header-scale-value table__header-scale-value-3">75</p>
+                    <p class="table__header-scale-value table__header-scale-value-4">100</p>
                 </div>
                 <div class="table__histograms">
                     <div class="table__histogram">
                         <p class="table__histogram-date table__histogram-date-6">19, пн</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value table__histogram-value-date-6 table__histogram-value-30">30</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-6 table__histogram-value-30">30</p>
+                            <p class="table__histogram-value table__histogram-value-date-6">30</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date  table__histogram-date-5">20, вт</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-5 table__histogram-value-30">30</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-5 table__histogram-value-30">30</p>
+                            <p class="table__histogram-value table__histogram-value-date-5">30</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date table__histogram-date-4">21, ср</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-4 table__histogram-value-16">16</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-4 table__histogram-value-16">16</p>
+                            <p class="table__histogram-value table__histogram-value-date-4">16</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date table__histogram-date-3">22, чт</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-3 table__histogram-value-11">11</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-3 table__histogram-value-16">11</p>
+                            <p class="table__histogram-value table__histogram-value-date-3">11</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date table__histogram-date-2">23, пт</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-2 table__histogram-value-76">76</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-2 table__histogram-value-76">76</p>
+                            <p class="table__histogram-value table__histogram-value-date-2">76</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date table__histogram-date-1">24, сб</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-1 table__histogram-value-12">12</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-1 table__histogram-value-12">12</p>
+                            <p class="table__histogram-value table__histogram-value-date-1">12</p>
                         </div>
                     </div>
                     <div class="table__histogram">
                         <p class="table__histogram-date table__histogram-date-0">25, вс</p>
                         <div class="table__histogram-value-container">
                             <!--<p class="table__histogram-value  table__histogram-value-date-0 table__histogram-value-6">6</p>-->
-                            <p class="table__histogram-value table__histogram-value-date-0 table__histogram-value-6">6</p>
+                            <p class="table__histogram-value table__histogram-value-date-0">6</p>
                         </div>
                     </div>
                 </div>
                 <div class="table__header-scale">
-                    <p class="table__header-scale-value">0</p>
-                    <p class="table__header-scale-value">25</p>
-                    <p class="table__header-scale-value">50</p>
-                    <p class="table__header-scale-value">75</p>
-                    <p class="table__header-scale-value">100</p>
+                    <p class="table__header-scale-value table__header-scale-value-0">0</p>
+                    <p class="table__header-scale-value table__header-scale-value-1">25</p>
+                    <p class="table__header-scale-value table__header-scale-value-2">50</p>
+                    <p class="table__header-scale-value table__header-scale-value-3">75</p>
+                    <p class="table__header-scale-value table__header-scale-value-4">100</p>
                 </div>
             </section>
         </section>
@@ -136,7 +136,7 @@
         </footer>
     </section>
     <!--<script src="./js/analytics.js"></script>-->
-    <!--<script src="index.28fb0c456fa578b942e8.js"></script>-->
-    <script src="analytics.3f32a13344b37a631546.js"></script>
+    <!--<script src="index.85b2443a7916dbc4a0b4.js"></script>-->
+    <script src="analytics.13f3fbd0481569247a9b.js"></script>
 </body>
 </html>
